--- a/requirements.txt
+++ b/requirements.txt
@@ -32,8 +32,8 @@ redis==2.7.1
 --allow-external pyodbc
 --allow-unverified pyodbc
 pyodbc==3.0.7
-# Not available
 # django-pyodbc-mssql==1.0-ionata1
+git+git://github.com/condense/ionata-django-pyodbc-snapshot.git@4e0abe1e890aeb6e5ddc5ca0ef91df3ed3e5df9b
 django-chainable-manager==0.3.1
 django-haystack==1.2.7
 xapian-haystack==1.1.5beta
